--- a/public/index.css
+++ b/public/index.css
@@ -3,6 +3,7 @@ body{
     flex-direction: column;
     text-align: center;
     flex-wrap: nowrap;
+    background: azure;
 }
 .welcome-title{
     font-size: xx-large;
