--- a/public/history.css
+++ b/public/history.css
@@ -25,7 +25,7 @@ a {
 
 th {
     color:aliceblue;
-	background:#35cfff;
+	background:#0A66C2;
     padding: 15px;
     margin: 5px;
     border-radius: 5px;
