--- a/public/index.css
+++ b/public/index.css
@@ -5,6 +5,12 @@ body{
     flex-wrap: nowrap;
     background: azure;
 }
+
+#prompt {
+    font-size: xx-large;
+    font-weight: bolder;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+}
 .welcome-title{
     font-size: xx-large;
     font-weight: bolder;
@@ -209,3 +215,26 @@ body{
     color: #000;
     transition: all 0.15s ease;
   }
+
+nav{
+    margin-left: auto;
+    background-color: transparent;
+    display: flex;
+    position: fixed;  
+    flex-direction: row;
+    justify-content: space-evenly;  
+    width: 20%;
+    height: 35px;
+}
+
+a {
+    display:inline-block;
+    background-color: rgb(67, 120, 235);
+    border: none;
+    border-radius: 10px;
+    color: white;
+    padding: 5px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+}
